# Kalman_1D

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  config.yaml  format_and_check.sh  plots.sh  run.sh
.github/workflows/: cmake.yml
scripts/: plots.py
src/: config.cpp  config.hpp  data_generator.cpp  data_generator.hpp  kalman.cpp  kalman.hpp  main.cpp  pipeline.cpp  pipeline.hpp  pipeline_benchmark.cpp
tests/: kalman_test.cpp
